--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Memorias del Olvido</title>
 </head>
 <body>
-    <h1>Hasta Siempre</h1>
+    <h1>Carta al Cielo</h1>
     <div>
         <p>
             Me tomo un mes poder sentarme a escribir esto, creo que sabia que todo el dolor resurgiría y estaba evitandolo. Pero me dije a mi mismo que no importaba que tan mal me haga, esto lo hacia por vos. Y aunque me sigue pareciendo muy injusto, considero que ahora estas más tranquilo, sin dolor y tomando el descanso que tanto te mereces.<br>
